Tue Apr 12 18:31:29 2005  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstfiledialog.c: import MIDI files via
	bst_project_import_midi_file().

	* beast-gtk/bstbseutils.[hc]: provide bst_project_import_midi_file(),
	which ensures properly setup songs (with mixer and no orphaned parts).

Mon Apr 11 00:51:33 2005  Tim Janik  <timj@gtk.org>

	* beast-gtk/dialogs/radgets-standard.xml: support $show-tabs 
	for notebooks.

2005-04-01  Steve Murphy  <murf@e-tools.com>

        * configure.in: Added "rw" to ALL_LINGUAS.

Mon Mar  7 09:25:01 2005  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstinstrumentview.h: 
	* beast-gtk/bstinstrumentview.c: removed outdated files.

Mon Mar  7 08:47:58 2005  Tim Janik  <timj@gtk.org>

	* *: changed references to former C++ .h headers to .hh.

Mon Mar  7 07:55:46 2005  Tim Janik  <timj@gtk.org>

        * removed obsolete .h C++ headers.

        * adapted sources to compile against .hh C++ headers.

Mon Mar  7 07:33:06 2005  Tim Janik  <timj@gtk.org>

	* *.hh: added .hh variants for .h C++ headers.

Sun Mar  6 23:30:36 2005  Tim Janik  <timj@gtk.org>

	* acbeast.m4: use $(tput cols) to figure terminal width instead of 
	ncurses, suggested by Thomas Dickey <dickey@saltmine.radix.net>.

Sat Feb  5 15:34:50 2005  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstapp.c: permit creation of a single song only through
	the gui. 

	* beast-gtk/dialogs/radgets-standard.xml: define handle-box container.

	* beast-gtk/dialogs/radgets-beast.xml:
	* beast-gtk/bstapp.c: rearranged widgets in the main app shell.

Sat Jan 29 00:03:32 2005  Tim Janik  <timj@gtk.org>

	* beast-gtk/gxk/gxkcellrendererpopup.c (gxk_cell_renderer_idle_popup): 
	skip dialog popup if the editing entry has been removed meanwhile.
	works around GtkTreeView button press handling bugs as described in:
	http://mail.gnome.org/archives/gtk-devel-list/2005-January/msg00144.html

Wed Jan 26 01:22:04 2005  Tim Janik  <timj@gtk.org>

	* configure.in: up, up version to 0.6.5rc, binary 0, interface 0.
